--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
-      
 {
   "name": "telegram-shopping-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test >
+    "test": "echo \"Error: no test",
   },
   "keywords": [],
   "author": "",
